tests/errors/dict_missing_key.py
# expect_error: KeyError
data = {'a': 1}
print(data['missing'])